# hts_engine_api

./: CMakeLists.txt  ChangeLog  Makefile.in  aclocal.m4  configure  hts_engine_API-1.01.tar.gz.delta  hts_engine_API-1.01.tar.gz.id  hts_engine_API-1.02.tar.gz.delta  hts_engine_API-1.02.tar.gz.id  hts_engine_API-1.03.tar.gz.delta  hts_engine_API-1.03.tar.gz.id  hts_engine_API-1.04.tar.gz.delta  hts_engine_API-1.04.tar.gz.id  hts_engine_API-1.05.tar.gz.delta  hts_engine_API-1.05.tar.gz.id  hts_engine_API-1.05me.tar.gz.delta  hts_engine_API-1.05me.tar.gz.id  hts_engine_API-1.06.tar.gz.delta  hts_engine_API-1.06.tar.gz.id  hts_engine_API-1.07.tar.gz.delta  hts_engine_API-1.07.tar.gz.id  hts_engine_API-1.08.tar.gz.delta  hts_engine_API-1.08.tar.gz.id  hts_engine_API-1.09.tar.gz.delta  hts_engine_API-1.09.tar.gz.id  hts_engine_API-1.10.tar.gz.delta  hts_engine_API-1.10.tar.gz.id
cmake/: CheckPrototypeExists.cmake  system.cmake
include/: HTS_engine.h
lib/: HTS_engine.c  HTS_speect.c  Makefile.in
src/: configure.ac
src/cmake/: ac_header_stdc.cmake  os.cmake
src/include/: HTS_engine.h
src/lib/: HTS_gstream.c  HTS_vocoder.c
